# AutoClicker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile
frontend/src/: App.js
frontend/src/components/: LandingPage.js  RoomPage.js
src/: main.rs
